--- a/src/components/client/layout/main.scss
+++ b/src/components/client/layout/main.scss
@@ -1,7 +1,11 @@
 .mainLayout {
   display: flex;
   flex-direction: column;
-  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-width: thin;
 
   .productTitle {
     font-size: 1.8rem;
