--- a/src/components/client/layout/nav.scss
+++ b/src/components/client/layout/nav.scss
@@ -5,6 +5,8 @@
   gap: 1rem;
   align-items: center;
   width: 100%;
+  height: 2rem;
+  margin-top: 1rem;
 
   a {
     text-decoration: none;
@@ -15,11 +17,6 @@
 
     &.active {
       color: dodgerblue;
-    }
-
-    &:hover {
-      color: dodgerblue;
-      opacity: 0.8;
     }
   }
 }
